--- a/example/network/index.html
+++ b/example/network/index.html
@@ -282,7 +282,13 @@
         radialIndex: link.radialIndex
       }));
 
+      // Store the camera state
+      let cameraState = Graph.camera();
+
       Graph.graphData({ nodes: filteredNodes, links: filteredLinks });
+
+       // Restore the camera state
+      Graph.camera(cameraState);
 
       // Populate entity list for selected category
       const entityListContainer = document.getElementById('entityList');
@@ -366,16 +372,16 @@
 
       const filteredNodes = nodes.filter(n =>
         n.id === centerNodeId || (n.radialIndex !== undefined && radialIndexSet.has(n.radialIndex))
-      );
+        );
 
       const nodeMap = new Map(filteredNodes.map(n => [n.id, n]));
       const filteredLinks = links
-        .filter(link => nodeMap.has(link.source.id ?? link.source) && nodeMap.has(link.target.id ?? link.target))
-        .map(link => ({
-          source: nodeMap.get(link.source.id ?? link.source),
-          target: nodeMap.get(link.target.id ?? link.target),
-          radialIndex: link.radialIndex
-        }));
+      .filter(link => nodeMap.has(link.source.id ?? link.source) && nodeMap.has(link.target.id ?? link.target))
+      .map(link => ({
+        source: nodeMap.get(link.source.id ?? link.source),
+        target: nodeMap.get(link.target.id ?? link.target),
+        radialIndex: link.radialIndex
+      }));
 
       Graph.graphData({ nodes: filteredNodes, links: filteredLinks });
     }
