zoom out be 20% after graph is initiated

--- a/example/network/index.html
+++ b/example/network/index.html
@@ -163,6 +163,11 @@
     const gData = { nodes, links };
     const Graph = ForceGraph()(document.getElementById('graph'))
     .graphData(gData)
+    .onEngineStop(() => {
+      const initialZoom = Graph.zoom() * 0.8;
+      Graph.zoom(initialZoom);
+      Graph.centerAt(0, 0, 0);
+    });
     .enableNodeDrag(false)
     .linkDirectionalParticles(0)
     .linkWidth(() => 0.5)
