--- a/example/network/index.html
+++ b/example/network/index.html
@@ -27,6 +27,7 @@
       font-weight: bold;
       transition: color 0.2s;
     }
+
     .filter-item.active {
       color: #000;
       padding: 2px 6px;
@@ -37,7 +38,7 @@
       z-index: 11;
       max-height: 90vh;
       overflow-y: auto;
-      display: none;
+      display: none; /* hidden by default */
     }
     #entityList div {
       cursor: pointer;
@@ -62,25 +63,66 @@
   <div id="entityList"></div>
   <div id="graph"></div>
   <div id="infoPopup" style="
-    position: absolute;
-    top: 100px;
-    right: 20px;
-    background: white;
-    border: 1px solid #ccc;
-    padding: 12px;
-    border-radius: 8px;
-    font-family: sans-serif;
-    display: none;
-    z-index: 20;
-    max-width: 300px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  position: absolute;
+  top: 100px;
+  right: 20px;
+  background: white;
+  border: 1px solid #ccc;
+  padding: 12px;
+  border-radius: 8px;
+  font-family: sans-serif;
+  display: none;
+  z-index: 20;
+  max-width: 300px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
   ">
-    <strong id="popupName"></strong><br>
-    <span id="popupCategory"></span><br>
-    <span id="popupImpact"></span>
-  </div>
+  <strong id="popupName"></strong><br>
+  <span id="popupCategory"></span><br>
+  <span id="popupImpact"></span>
+</div>
 <script>
-  const entities = [/* entities array — same as before — truncated for brevity */];
+  const entities = [
+    { name: 'URF / TX The BOX', categories: ['Investment'], impacts: ['Retail'] },
+    { name: 'SAUVEREIGN', categories: ['Investment'], impacts: ['Branding', 'Retail'] },
+    { name: 'DONGHAI', categories: ['Investment'], impacts: ['East.West', 'Strategy.Culture'] },
+    { name: 'EASTERN SEAS', categories: ['Investment'], impacts: ['Creative Solution'] },
+    { name: 'DANDELION', categories: ['Investment'], impacts: ['Strategy.Culture', 'Edu.Learning.Collective'] },
+    { name: 'BILI Q', categories: ['Investment'], impacts: ['East.West'] },
+    { name: 'KYOTO ART BANK', categories: ['Investment'], impacts: ['Culture', 'Creative Solution'] },
+    { name: 'ARAMIS WINES', categories: ['Investment'], impacts: ['Branding'] },
+    { name: 'SEIICHI MIZUNO', categories: ['Forces'], impacts: ['Retail'] },
+    { name: 'MARIO TESTINO', categories: ['Forces'], impacts: ['Branding', 'Retail'] },
+    { name: 'JUDY DOBIAS', categories: ['Forces'], impacts: ['East.West', 'Strategy.Culture'] },
+    { name: 'THE CROSSES', categories: ['Forces'], impacts: ['Creative Solution'] },
+    { name: 'SUNTCHI', categories: ['Forces'], impacts: ['Strategy.Culture', 'Edu.Learning.Collective'] },
+    { name: 'SHANGHAI INDUSTRIAL MUSEUM', categories: ['Consultancies'], impacts: ['East.West'] },
+    { name: 'HONG KONG JOCKEY CLUB', categories: ['Consultancies'], impacts: ['Culture', 'Creative Solution'] },
+    { name: 'MOLESKINE', categories: ['Consultancies'], impacts: ['Branding'] },
+    { name: 'LUXEMBOURG IN CHINA', categories: ['Cities.culture.art'], impacts: ['Retail'] },
+    { name: 'TONGJI UNIVERSITY', categories: ['Cities.culture.art'], impacts: ['Branding', 'Retail'] },
+    { name: 'UNIVERSITY COLLABORATIONS', categories: ['Cities.culture.art'], impacts: ['East.West', 'Strategy.Culture'] },
+    { name: 'CONFUCIUS SECONDARY SCHOOL', categories: ['Cities.culture.art'], impacts: ['Creative Solution'] },
+    { name: 'DANISH DESIGN AWARD', categories: ['Cities.culture.art'], impacts: ['Strategy.Culture', 'Edu.Learning.Collective'] },
+    { name: 'WORLD DESIGN CAPITAL', categories: ['Cities.culture.art'], impacts: ['East.West'] },
+    { name: 'BANGKOK INTL DESIGN EXPO', categories: ['Cities.culture.art'], impacts: ['Culture', 'Creative Solution'] },
+    { name: 'PENANG INSTITUTE', categories: ['Cities.culture.art'], impacts: ['Branding'] },
+    { name: 'YUAN MUSEUM', categories: ['Cities.culture.art'], impacts: ['East.West'] },
+    { name: 'PALACE MUSEUM', categories: ['Cities.culture.art'], impacts: ['Culture', 'Creative Solution'] },
+    { name: 'ZENG FANZHI', categories: ['Cities.culture.art'], impacts: ['Branding'] },
+    { name: 'TED / TEDX', categories: ['Ecosystems'], impacts: ['East.West'] },
+    { name: 'BURNING MAN', categories: ['Ecosystems'], impacts: ['Culture', 'Creative Solution'] },
+    { name: 'PAN ASIA NETWORK', categories: ['Ecosystems'], impacts: ['Branding'] },
+    { name: 'SHANGHAI INDUSTRIAL MUSEUM', categories: ['Ecosystems'], impacts: ['East.West'] },
+    { name: 'EARTH ONE', categories: ['Ecosystems'], impacts: ['Culture', 'Creative Solution'] },
+    { name: 'ALTER PROJECTS', categories: ['Ecosystems'], impacts: ['Branding'] },
+    { name: 'ASIA-EUROPE BRIDGE', categories: ['Ecosystems'], impacts: ['Branding'] },
+    { name: 'BLOOMINGDALES NEW YORK', categories: ['Yesteryears'], impacts: ['Branding'] },
+    { name: 'THE NEW YORK TIMES', categories: ['Yesteryears'], impacts: ['Branding'] },
+    { name: 'URBAN ARCH BI-CITY BIENNALE', categories: ['Yesteryears'], impacts: ['Branding'] },
+    { name: 'ISETAN', categories: ['Yesteryears'], impacts: ['Branding'] },
+    { name: 'BENETTON', categories: ['Yesteryears'], impacts: ['Branding'] },
+    { name: 'SOTHEBYS AUCTION HOUSE, INTL REALTY', categories: ['Yesteryears'], impacts: ['Branding'] }
+  ];
 
   const impactRingMap = {
     'Strategy.Culture': 0,
@@ -137,15 +179,16 @@
 
   const gData = { nodes, links };
   const Graph = ForceGraph()(document.getElementById('graph'))
-    .graphData(gData)
-    .enableNodeDrag(false)
-    .linkDirectionalParticles(0)
-    .linkWidth(() => 0.5)
-    .linkColor(() => '#000000')
-    .nodeCanvasObject((node, ctx) => {
-      if (node.id === centerNodeId) {
-        ctx.save();
-        ctx.translate(node.x, node.y);
+  .graphData(gData)
+  .enableNodeDrag(false)
+  .linkDirectionalParticles(0)
+  .linkWidth(() => 0.5)
+  .linkColor(() => '#000000')
+  .nodeCanvasObject((node, ctx, globalScale) => {
+    if (node.id === centerNodeId) {
+        // Draw concentric rings around center
+      ctx.save();
+        ctx.translate(node.x, node.y); // Needed to draw arcs at the center node's position
         ctx.strokeStyle = '#ddd';
         ctx.lineWidth = 1;
         for (let i = 0; i < maxLayers; i++) {
@@ -155,6 +198,7 @@
         }
         ctx.restore();
       } else {
+        // Draw normal node
         const size = node.size || 4;
         ctx.beginPath();
         ctx.arc(node.x, node.y, size, 0, 2 * Math.PI, false);
@@ -162,13 +206,28 @@
         ctx.fill();
       }
     })
-    .onEngineStop(() => {
-      Graph.zoom(Graph.zoom() * 0.5);
-      Graph.centerAt(0, 0, 0);
-    });
+  .onEngineStop(() => {
+    const initialZoom = Graph.zoom() * 0.5;
+    Graph.zoom(initialZoom);
+    Graph.centerAt(0, 0, 0);
+  });
 
+    // Filters UI
   const allCategories = [...new Set(entities.flatMap(e => e.categories))];
   const allImpacts = [...new Set(entities.flatMap(e => e.impacts))];
+
+  function createCheckbox(filterType, value) {
+    const label = document.createElement('label');
+    label.style.display = 'block';
+    const checkbox = document.createElement('input');
+    checkbox.type = 'checkbox';
+    checkbox.value = value;
+    checkbox.name = filterType;
+    checkbox.onchange = applyFilters;
+    label.appendChild(checkbox);
+    label.appendChild(document.createTextNode(' ' + value));
+    return label;
+  }
 
   function createFilterList(containerId, filterType, values) {
     const container = document.getElementById(containerId);
@@ -179,18 +238,26 @@
       item.dataset.type = filterType;
       item.dataset.value = value;
       item.onclick = (e) => {
-        const isActive = item.classList.contains('active');
-        if (filterType === 'category') {
-          document.querySelectorAll('.filter-item[data-type="category"]').forEach(el => el.classList.remove('active'));
+        const type = item.dataset.type;
+
+        if (type === 'category') {
+          const allCategoryItems = document.querySelectorAll('.filter-item[data-type="category"]');
+          const isActive = item.classList.contains('active');
+
+            // Clear all active categories
+          allCategoryItems.forEach(el => el.classList.remove('active'));
+
           if (!isActive) {
             item.classList.add('active');
             showEntityList(item.dataset.value, item, e);
           } else {
             hideEntityList();
           }
-        } else {
+        } else if (type === 'impact') {
+            // Just toggle this one impact item
           item.classList.toggle('active');
         }
+
         applyFilters();
       };
       container.appendChild(item);
@@ -200,8 +267,10 @@
   createFilterList('categoryFilters', 'category', allCategories);
   createFilterList('impactFilters', 'impact', allImpacts);
 
+
   function getActiveFilters(type) {
-    return [...document.querySelectorAll(`.filter-item.active[data-type="${type}"]`)].map(el => el.dataset.value);
+    return [...document.querySelectorAll(`.filter-item.active[data-type="${type}"]`)]
+    .map(el => el.dataset.value);
   }
 
   function applyFilters() {
@@ -214,78 +283,113 @@
       if (!n.name) return;
       const catMatch = selectedCategories.length === 0 || selectedCategories.some(cat => n.categories.includes(cat));
       const impMatch = selectedImpacts.length === 0 || selectedImpacts.includes(n.impact);
-      if (catMatch && impMatch) radialToInclude.add(n.radialIndex);
+      if (catMatch && impMatch) {
+        radialToInclude.add(n.radialIndex);
+      }
     });
 
     const filteredNodes = nodes.filter(n =>
       n.id === centerNodeId || (n.radialIndex !== undefined && radialToInclude.has(n.radialIndex))
-    );
+      );
 
     const nodeMap = new Map(filteredNodes.map(n => [n.id, n]));
+
     const filteredLinks = links
-      .filter(link => nodeMap.has(link.source.id ?? link.source) && nodeMap.has(link.target.id ?? link.target))
-      .map(link => ({
-        source: nodeMap.get(link.source.id ?? link.source),
-        target: nodeMap.get(link.target.id ?? link.target),
-        radialIndex: link.radialIndex
-      }));
+    .filter(link => nodeMap.has(link.source.id ?? link.source) && nodeMap.has(link.target.id ?? link.target))
+    .map(link => ({
+      source: nodeMap.get(link.source.id ?? link.source),
+      target: nodeMap.get(link.target.id ?? link.target),
+      radialIndex: link.radialIndex
+    }));
 
     Graph.graphData({ nodes: filteredNodes, links: filteredLinks });
 
+      // Populate entity list for selected category
     const entityListContainer = document.getElementById('entityList');
     entityListContainer.innerHTML = '';
 
     if (selectedCategories.length === 1 && selectedImpacts.length === 0) {
       const selectedCategory = selectedCategories[0];
-      const matchingEntities = entities.filter(e => e.categories.includes(selectedCategory)).map(e => e.name);
+      const matchingEntities = entities
+      .filter(e => e.categories.includes(selectedCategory))
+      .map(e => e.name);
 
       matchingEntities.forEach(name => {
         const item = document.createElement('div');
         item.className = 'entity-item';
         item.textContent = name;
+
         item.onclick = () => {
-          filterToEntity(name);
+          const entityRadialIndex = nodes.find(n => n.name === name)?.radialIndex;
+          if (entityRadialIndex === undefined) return;
+
+          const filteredNodes = nodes.filter(n =>
+            n.id === centerNodeId || n.radialIndex === entityRadialIndex
+            );
+          const nodeMap = new Map(filteredNodes.map(n => [n.id, n]));
+          const filteredLinks = links
+          .filter(link =>
+            nodeMap.has(link.source.id ?? link.source) &&
+            nodeMap.has(link.target.id ?? link.target)
+            )
+          .map(link => ({
+            source: nodeMap.get(link.source.id ?? link.source),
+            target: nodeMap.get(link.target.id ?? link.target),
+            radialIndex: link.radialIndex
+          }));
+
+          Graph.graphData({ nodes: filteredNodes, links: filteredLinks });
         };
+
         entityListContainer.appendChild(item);
       });
 
       entityListContainer.style.display = 'block';
     } else {
       entityListContainer.style.display = 'none';
-    }
+    }  
   }
-
   function showEntityList(category, clickedElement, event) {
     const matchingEntities = entities.filter(e => e.categories.includes(category));
     const entityListEl = document.getElementById('entityList');
-    entityListEl.innerHTML = '';
+      entityListEl.innerHTML = ''; // clear previous
 
-    matchingEntities.forEach(entity => {
-      const el = document.createElement('div');
-      el.textContent = entity.name;
-      el.onclick = () => filterToEntity(entity.name);
-      entityListEl.appendChild(el);
-    });
+      matchingEntities.forEach(entity => {
+        const el = document.createElement('div');
+        el.textContent = entity.name;
+        el.onclick = () => {
+          filterToEntity(entity.name);
+        };
+        entityListEl.appendChild(el);
+      });
 
-    const rect = clickedElement.getBoundingClientRect();
-    entityListEl.style.left = `${rect.right + 10}px`;
-    entityListEl.style.top = `${rect.top + window.scrollY}px`;
-    entityListEl.style.display = 'block';
-  }
+      // Position to the right of clicked category
+      const rect = clickedElement.getBoundingClientRect();
+      entityListEl.style.left = `${rect.right + 10}px`;
+      entityListEl.style.top = `${rect.top + window.scrollY}px`;
+      entityListEl.style.display = 'block';
+    }
 
-  function hideEntityList() {
-    document.getElementById('entityList').style.display = 'none';
-  }
+    function hideEntityList() {
+      const entityListEl = document.getElementById('entityList');
+      entityListEl.style.display = 'none';
+    }
 
-  function filterToEntity(name) {
-    const targetEntity = entities.find(e => e.name === name);
-    if (!targetEntity) return;
+    function filterToEntity(name) {
+      const targetEntity = entities.find(e => e.name === name);
+      if (!targetEntity) return;
 
-    const radialIndex = entities.findIndex(e => e.name === name);
-    const filteredNodes = nodes.filter(n => n.id === centerNodeId || n.radialIndex === radialIndex);
+      const radialIndexSet = new Set();
+      entities.forEach((e, i) => {
+        if (e.name === name) radialIndexSet.add(i);
+      });
 
-    const nodeMap = new Map(filteredNodes.map(n => [n.id, n]));
-    const filteredLinks = links
+      const filteredNodes = nodes.filter(n =>
+        n.id === centerNodeId || (n.radialIndex !== undefined && radialIndexSet.has(n.radialIndex))
+        );
+
+      const nodeMap = new Map(filteredNodes.map(n => [n.id, n]));
+      const filteredLinks = links
       .filter(link => nodeMap.has(link.source.id ?? link.source) && nodeMap.has(link.target.id ?? link.target))
       .map(link => ({
         source: nodeMap.get(link.source.id ?? link.source),
@@ -293,19 +397,18 @@
         radialIndex: link.radialIndex
       }));
 
-    Graph.graphData({ nodes: filteredNodes, links: filteredLinks });
+      Graph.graphData({ nodes: filteredNodes, links: filteredLinks });
 
-    // ✅ FIXED: Show info popup when clicking from list
-    showInfoPopup(targetEntity);
-  }
-
-  function showInfoPopup(entity) {
-    const popup = document.getElementById('infoPopup');
-    document.getElementById('popupName').textContent = entity.name;
-    document.getElementById('popupCategory').textContent = `Category: ${entity.categories.join(', ')}`;
-    document.getElementById('popupImpact').textContent = `Impact: ${entity.impacts.join(', ')}`;
-    popup.style.display = 'block';
-  }
-</script>
+      showInfoPopup(targetEntity);
+    }
+    
+    function showInfoPopup(entity) {
+      const popup = document.getElementById('infoPopup');
+      document.getElementById('popupName').textContent = entity.name;
+      document.getElementById('popupCategory').textContent = `Category: ${entity.categories.join(', ')}`;
+      document.getElementById('popupImpact').textContent = `Impact: ${entity.impacts.join(', ')}`;
+      popup.style.display = 'block';
+    }
+  </script>
 </body>
 </html>
