--- a/example/network/index.html
+++ b/example/network/index.html
@@ -178,27 +178,62 @@
 
       lastNodeId = thisNodeId;
 
-          // Add invisible tip node extending the radial line
-      const tipRadius = baseRadius + maxLayers * ringSpacing + 20; // slightly beyond outer ring
-      const tipX = tipRadius * Math.cos(angle);
-      const tipY = tipRadius * Math.sin(angle);
+      // Add invisible tip node extending the radial line
+      let finalX, finalY;
 
-      const tipNodeId = nodeId++;
-      nodes.push({
-        id: tipNodeId,
-        fx: tipX,
-        fy: tipY,
-        radialIndex: index,
-        size: 0,        // Invisible
-        color: 'rgba(0,0,0,0)', // Fully transparent
-        isTip: true     // Optional flag, in case you want to filter later
+      entity.impacts.forEach(impact => {
+        const ringIndex = impactRingMap[impact] ?? 0;
+        const radius = baseRadius + ringIndex * ringSpacing;
+        const x = radius * Math.cos(angle);
+        const y = radius * Math.sin(angle);
+
+        const thisNodeId = nodeId++;
+        nodes.push({
+          id: thisNodeId,
+          fx: x,
+          fy: y,
+          name: entity.name,
+          categories: entity.categories,
+          impact: impact,
+          radialIndex: index,
+          size: 6,
+          color: ringColors[ringIndex % ringColors.length]
+        });
+
+        links.push({
+          source: lastNodeId,
+          target: thisNodeId,
+          radialIndex: index
+        });
+
+        lastNodeId = thisNodeId;
+        finalX = x;
+        finalY = y;
       });
 
-      links.push({
-        source: lastNodeId,
-        target: tipNodeId,
-        radialIndex: index
-      });
+      // Add invisible tip node just beyond last node
+      if (finalX !== undefined && finalY !== undefined) {
+        const extensionFactor = 1.15; // slightly beyond
+        const tipX = finalX * extensionFactor;
+        const tipY = finalY * extensionFactor;
+
+        const tipNodeId = nodeId++;
+        nodes.push({
+          id: tipNodeId,
+          fx: tipX,
+          fy: tipY,
+          radialIndex: index,
+          size: 0.1, // almost invisible
+          color: 'rgba(0,0,0,0)', // fully transparent
+          name: null
+        });
+
+        links.push({
+          source: lastNodeId,
+          target: tipNodeId,
+          radialIndex: index
+        });
+      }
     });
   });
 
